# dl

./: .gitignore  README.md  flake.nix  package.nix  pyproject.toml  result
src/dl/: cli.py  config.py  downloader.py
